--- a/localisation/log.txt
+++ b/localisation/log.txt
@@ -5767,6 +5767,7 @@ Marked: MonksAndMystics.csv (1015): hunt_platypus_DESC
 Marked: MonksAndMystics.csv (1016): hunt_platypus_TOOLTIP 
 Marked: MonksAndMystics.csv (1017): convert_to_liege_culture_on_liege 
 Marked: MonksAndMystics.csv (1018): convert_to_liege_culture_on_liege_named 
+Marked: MonksAndMystics.csv (1019): gov_aztec_empire 
 Marked: MonksAndMystics.csv (1020): AIREASON_STATIC_BACKER 
 Marked: MonksAndMystics.csv (1021): SOCIETIES_VIEW_MEMBER_SCORE_TITLE 
 Marked: MonksAndMystics.csv (1022): MEMBER_SCORE_FROM_ATTRIBUTE 
@@ -10815,30 +10816,6 @@ Marked: MonksAndMystics.csv (6074): secret_religious_society_zikri_leader_desc
 Marked: MonksAndMystics.csv (6075): secret_religious_society_zun_pagan_leader_desc 
 Marked: MonksAndMystics.csv (6076): temple_baron_female_christian 
 Marked: MonksAndMystics.csv (6077): String_spahis 
-Marked: v1_07.csv (90): EVTDESC8076 
-Marked: v1_07.csv (92): EVTDESC8081 
-Marked: v1_07.csv (94): EVTDESC8086 
-Marked: v1_07.csv (96): EVTDESC8091 
-Marked: v1_07.csv (98): EVTDESC8094 
-Marked: v1_092.csv (0): NOT_IN_DYNASTY 
-Marked: v1_092.csv (1): IN_DYNASTY 
-Marked: v1_10.csv (101): TOGGLE_LOOTER 
-Marked: v1_102.csv (25): EVTOPTA_TOG_3402 
-Marked: v1_11.csv (11): AUTO_INVITE_PLOTTERS 
-Marked: v1_11.csv (12): AUTO_STOP_PLOTS 
-Marked: v2_00.csv (337): EVTDESC_SOA_4200 
-Marked: v2_00.csv (834): EVTDESC_SoA_107 
-Marked: v2_00b.csv (18): donate_money_to_assassins_desc 
-Marked: v2_00b.csv (20): donate_money_to_bektashi_desc 
-Marked: v2_00b.csv (22): donate_money_to_knights_templar_desc 
-Marked: v2_00b.csv (23): donate_money_to_knights_hospitaler_desc 
-Marked: v2_00b.csv (24): donate_money_to_teutonic_order_desc 
-Marked: v2_00b.csv (25): donate_money_to_knights_santiago_desc 
-Marked: v2_00b.csv (26): donate_money_to_knights_calatrava_desc 
-Marked: v2_00b.csv (27): donate_money_to_holy_sepulchre_desc 
-Marked: v2_00b.csv (28): donate_money_to_saint_anthony_desc 
-Marked: v2_00b.csv (29): donate_money_to_the_immortals_desc 
-Marked: v2_00b.csv (30): donate_money_to_the_zealots_desc 
 Marked: v2_02.csv (41): EVTDESC_SoA_561 
 Marked: v2_02.csv (43): EVTDESC_SoA_563 
 Marked: v2_02.csv (44): EVTDESC_SoA_565 
