--- a/localisation/v2_20.csv
+++ b/localisation/v2_20.csv
@@ -619,8 +619,8 @@ CHRONICLE_PLAYER_CONVERTED_RELIGION; [Root.GetTitledName] ╢с [From.Religion.GetN
 CHRONICLE_LIEGE_CONVERTED_RELIGION; [Root.GetTitledName] ╢Схк,╢с [From.Religion.GetName] в╙оРП╖рю [Root.Religion.GetName].;;;;;;;;;;X
 CHRONICLE_MAJOR_VASSAL_CONVERTED_RELIGION; [Root.GetTitledName], [Root.Liege.GetTitledName] ╣д╢СаЛжВ,╢с [From.Religion.GetName] в╙оРП╖рю [Root.Religion.GetName].;;;;;;;;;;X
 CHRONICLE_PLAYER_CONVERTED_CULTURE; [Root.GetTitledName] ╫╚пб╣до╟квхзхК [Root.Culture.GetName] нд╩╞ж╝жп, ╡╩тыйэ [Root.GetHerselfHimself] [From.Culture.GetName] ╣дс╟оЛ.;;;;;;;;;;X
-CHRONICLE_HERESY_TAKEOVER_PLAYER_IS_NEW; л╦бшсп╧ь [From.Religion.GetName] пеяЖ╣д╩╟лБ╠Д╣цй╝╥жаВпп╤Ь╧Ц╥╨, рР╢к [FromFrom.Religion.GetName] ╡╩╣ц╡╩╟яфДйсн╙рЛ╤к.;;;;;;;;;;X
-CHRONICLE_HERESY_TAKEOVER_PLAYER_IS_OLD; л╦бшсп╧ь [From.Religion.GetName] пеяЖ╣д╩╟лБ╠Д╣цй╝╥жаВпп╤Ь╧Ц╥╨, рР╢к [FromFrom.Religion.GetName] ╡╩╣ц╡╩╟яфДйсн╙рЛ╤к.;;;;;;;;;;X
+CHRONICLE_HERESY_TAKEOVER_PLAYER_IS_NEW; л╦бшсп╧ь [From.GetName] пеяЖ╣д╩╟лБ╠Д╣цй╝╥жаВпп╤Ь╧Ц╥╨, рР╢к [FromFrom.GetName] ╡╩╣ц╡╩╟яфДйсн╙рЛ╤к.;;;;;;;;;;X
+CHRONICLE_HERESY_TAKEOVER_PLAYER_IS_OLD; л╦бшсп╧ь [From.GetName] пеяЖ╣д╩╟лБ╠Д╣цй╝╥жаВпп╤Ь╧Ц╥╨, рР╢к [FromFrom.GetName] ╡╩╣ц╡╩╟яфДйсн╙рЛ╤к.;;;;;;;;;;X
 CHRONICLE_PLAYER_REFORMED_RELIGION; "[Root.GetTitledName] аЛ╣╪ак [Root.Religion.GetName] ╣д╦д╦О, й╧╣ц [Root.Religion.GetScriptureName] ╣дЁ╜╠╬╢╚╠И╦В╣ь,хц [Root.Religion.GetRandomGodName] ╣д╧Б╩т╠И╡╪йю╫Г.";;;;;;;;;;X
 CHRONICLE_OTHER_REFORMED_PLAYERS_RELIGION; "[Root.Religion.GetName] пеяЖ╠╩хкЁи╧╕╦д╦О, [Root.Religion.GetScriptureName] ╣дЁ╜╠╬╠╩╦В╣ьхкцгкЫ╢╚кп, й╧ [Root.Religion.GetRandomGodName] ╣дхы╧Б╢╚╠Иц©╦Ж╫гбД.";;;;;;;;;;X
 CHRONICLE_PATRON_DEITY_SHIVA; [Root.GetTitledName] пШ╡╪, й╙феиЯ╫Я╨С╫╚йг [Root.GetHerHis] йь╩╓иЯ.;;;;;;;;;;X
@@ -686,7 +686,7 @@ convert_to_occitan;с╣╠╖╟б©кнд╩╞;;;;;;;;;;X
 convert_to_occitan_desc;тзю╜╤║нд╩╞бШяс╣дЁ╠аВоб,нрцгжноб╣дЁ╪цЯ╡╩╤о╡иди╟б©кхк╣днд╩╞╢╚мЁ,╡╩тыхон╙вт╪╨йгнВ╦Гльхк.нрцг╦цм╛яЫуБяЫвЖ...;;;;;;;;;;X
 EVTTITLE_CM_4000;л╚яТфОй©ме;;;;;;;;;;X
 EVTDESC_CM_4000;р╩╦Жу╦пб╣дфОй©ме╢с╢к╫╗а╒,н╙йь╩╓╦Опбсжн╟╢СвПху╤ЮиЯ╫л╤Ьме╫Атзр╩фП.кШцгЁфвт╪╨н╙'л╚яТфОй©',кШцгн╙пеяЖ╤ЬхВя╙у╫Ё║,кШцгтз╢ка╒йд,╠ь╤╗р╙╟я╢╚кпл╚яТ╣д╧Б╩т╟янчио╣д╧╚уЩ╢Ь╣╫йюиоц©╦Ж╫гбД.пМ╤ЮдЙгА╣ду╫й©йс╪схКфОй©мен╙╠оиЗхы╧Б.;;;;;;;;;;X
-EVTOPTA_CM_4000;тчцю[Root.Religion.GetRandomGodName]!;;;;;;;;;;X
+EVTOPTA_CM_4000;тчцю[zun_leader.Religion.GetRandomGodName]!;;;;;;;;;;X
 EVTDESC_CM_4002;нр╣д[GetFromRelation], [From.GetTitledFirstName],р╙гС╪схКл╚яТфОй©мех╔╣ёхниЯй╔╣дж╟нЯ╨╢нюдгЁГ╦ъ╣дпеяЖ.хГ╧ШуБяЫвЖ,кШ╩Асют╤╣дй╖х╔кЫсп╣д╪лЁпх╗.;;;;;;;;;;X
 EVTTOOLTIP_CM_4003;[This.GetTitledFirstName]Ёин╙л╚яТфОй©ме╣др╩т╠.;;;;;;;;;;X
 EVTDESC_CM_4006;н╟╢С╣д[Root.PrimaryTitle.GetRulerTitle],дЦ╣д©╤©╝╫Бдр╪╚╢С╣д╟ОжЗнрцгтзиЁЁ║ио©╧╩В[Root.Religion.GetRandomGodName]╣д╣пхк!т╦л╚яТ╣д╧Б╩тсюйюууаайь╩╓дЦж╝кЫтз!\n\nн╙акл╚яТ\n\n[From.GetTitledFirstName];;;;;;;;;;X
@@ -908,7 +908,7 @@ EVTDESC_CM_6304;вНпбоШо╒,ря╬╜Ёи╧╕╢ли╠ак[From.GetTitledName].[From.GetTitledName]
 EVTOPTA_CM_6304;ф╞ааё║!;;;;;;;;;;X
 EVTDESC_CM_6306;п║п║дЯ╤Ы╦ФкъдЦ╢ли╠ [From.GetTitledName]╣дрУд╠рях╩Ёи╧╕. [From.GetTitledName] кюсз╢л©м╣д╣╤об.╡╩пр╣дйг╢л©м╠╩в╔╩Я,╧╘ЁЖакд╩╨С╨зйж.;;;;;;;;;;X
 EVTOPTA_CM_6306;╨ц╟и.;;;;;;;;;;X
-EVTDESC_CM_6307;р╧юО,дЦвЬтздЦ╣д╡ьдД╢╕Ёак╪ве,╨Жх╩мБцФ╢╚ю╢р╩иЫоЛиЫ.мЫмБр╩©╢,дЦ©╢╣╫дЦфДжпр╩╦Жйлнюв╡╫Ьцедз,╡╠всио╩╧╡Еве╟я╣╤.р╩╦ЖиМ╢╘╨зрбцТ╫щспя╦кы╣дЁЖожтздЦцФг╟.дЦу╬акфПю╢йтм╪╣ж©╧,╣╚ю╢уъй╘у╧Ф╣йЛ╣диМ╥╗,╢схщ╣ьиаож╣╫дЦюКдЦ╡╩вЦр╩╢Г╣д╣ь╥╫.╬мтздЦхон╙кюфз╫╚жа╣ддгр╩©л,дгхкм╩х╩цФд©уЬдЭ,вЛ╫г╠еЁЖойя╙,╣╧тзакдЦ╣д╫еоб.╤Ьу╬тзкШ╨СцФ╣дйгдЦдгтГряяыяыр╩о╒╪Хдяу╬а╒╣дйлню.╦пп╩[Root.Religion.RandomGodName]╣д╠ёсс,хцдЦ╩╒©злсиЗ.;;;;;;;;;;X
+EVTDESC_CM_6307;р╧юО,дЦвЬтздЦ╣д╡ьдД╢╕Ёак╪ве,╨Жх╩мБцФ╢╚ю╢р╩иЫоЛиЫ.мЫмБр╩©╢,дЦ©╢╣╫дЦфДжпр╩╦Жйлнюв╡╫Ьцедз,╡╠всио╩╧╡Еве╟я╣╤.р╩╦ЖиМ╢╘╨зрбцТ╫щспя╦кы╣дЁЖожтздЦцФг╟.дЦу╬акфПю╢йтм╪╣ж©╧,╣╚ю╢уъй╘у╧Ф╣йЛ╣диМ╥╗,╢схщ╣ьиаож╣╫дЦюКдЦ╡╩вЦр╩╢Г╣д╣ь╥╫.╬мтздЦхон╙кюфз╫╚жа╣ддгр╩©л,дгхкм╩х╩цФд©уЬдЭ,вЛ╫г╠еЁЖойя╙,╣╧тзакдЦ╣д╫еоб.╤Ьу╬тзкШ╨СцФ╣дйгдЦдгтГряяыяыр╩о╒╪Хдяу╬а╒╣дйлню.╦пп╩[Root.Religion.GetRandomGodName]╣д╠ёсс,хцдЦ╩╒©злсиЗ.;;;;;;;;;;X
 EVTOPTA_CM_6307;нр╩А╡И╣╫йгк╜ж╦й╧╣д!;;;;;;;;;;X
 EVTDESC_CM_6308;©╢ю╢[From.GetTitledName]╟╡х╩нчМ╕.©ипр╣дйг,дЦ╣дрУд╠ц╩сп╠╩╫р╥╒.;;;;;;;;;;X
 EVTOPTA_CM_6308;обр╩╢ннрр╙хц[From.GetHerHim]кю.;;;;;;;;;;X
@@ -956,7 +956,7 @@ EVTDESC_CM_6324;пбоШо╒,[From.GetTitledName]╠╩Ёи╧╕╢ли╠.[From.GetTitledName]х╥пекю
 EVTOPTA_CM_6324;ф╞ааё║!;;;;;;;;;;X
 EVTDESC_CM_6326;пбоШо╒,[From.GetTitledName]╠╩Ёи╧╕╢ли╠.[From.GetTitledName]х╥пекюсз[From.GetHerHis]йлню╣д╫ёоб. ╡╩пр╣дйг,йлню╠╩в╔╣╫╤Ьгр╧╘ЁЖйгк╜об╣дд╠и╠ж╦аН.;;;;;;;;;;X
 EVTOPTA_CM_6326;╨ц╟и.;;;;;;;;;;X
-EVTDESC_CM_6327;тГЁ©,рЧ╬с╡ьдДиЗ╩Н╣дпбр╩лЛ... дЦууЁёЁтветГ╡м╡╒в╪╠╦╢РлЩмБцФйю╫Г╣доШо╒.р╩╦ЖйлнюгцдЦ╣дце╫Ью╢.кШвъ╣╫дЦцФг╟,дЦ╧ъюЩиЛЁЖйжв╪╠╦йух║пе╪Ч.ддж╙дгйлню╬сх╩╟нфПак╫ё,оРдЦ╢лю╢.дЦйЛа╥╣ьоРвСр╩╠э,╤Ц©╙ак╧╔╩В.кЁйжтзвювс╣вв╔фПр╩╟яь╟йв,ЁцкШ╧╔╩В╨С╪Дп╙м╠оРкШ╣д╦╧╡©.╦пп╩[Root.Religion.RandomGodName],хцдЦкююОлсиЗ.;;;;;;;;;;X
+EVTDESC_CM_6327;тГЁ©,рЧ╬с╡ьдДиЗ╩Н╣дпбр╩лЛ... дЦууЁёЁтветГ╡м╡╒в╪╠╦╢РлЩмБцФйю╫Г╣доШо╒.р╩╦ЖйлнюгцдЦ╣дце╫Ью╢.кШвъ╣╫дЦцФг╟,дЦ╧ъюЩиЛЁЖйжв╪╠╦йух║пе╪Ч.ддж╙дгйлню╬сх╩╟нфПак╫ё,оРдЦ╢лю╢.дЦйЛа╥╣ьоРвСр╩╠э,╤Ц©╙ак╧╔╩В.кЁйжтзвювс╣вв╔фПр╩╟яь╟йв,ЁцкШ╧╔╩В╨С╪Дп╙м╠оРкШ╣д╦╧╡©.╦пп╩[Root.Religion.GetRandomGodName],хцдЦкююОлсиЗ.;;;;;;;;;;X
 EVTOPTA_CM_6327;нр╩А╡ИЁЖйгк╜ж╦й╧╣д!;;;;;;;;;;X
 EVTDESC_CM_6328;©╢ю╢уБуп╫Х╣╤и╠[From.GetTitledName]й╖╟эак.х╩╤Ьд╩╨С╣д╪ф╩╝хк╡╒ц╩сп╠╩╫р╥╒.;;;;;;;;;;X
 EVTOPTA_CM_6328;╣хобр╩╢нр╩╤╗╩Аи╠ак[From.GetHerHim].;;;;;;;;;;X
@@ -977,7 +977,7 @@ EVTDESC_CM_6334;пбоШо╒,ря╬╜Ёи╧╕╢ли╠[From.GetTitledName]. [From.GetTitledName]рях
 EVTOPTA_CM_6334;ф╞ааё║!;;;;;;;;;;X
 EVTDESC_CM_6336;пбоШо╒,ря╬╜Ёи╧╕╢ли╠[From.GetTitledName]. [From.GetTitledName]рях╥пе╠╩╤╬иър╖ик╤╬╥╒иМмЖ. ╣╚╨э╡╩пр,дг╦Жкёиъхк╠╩в╔фПю╢,╩╧╧╘ЁЖйгк╜ж╦й╧╣дд╠и╠.;;;;;;;;;;X
 EVTOPTA_CM_6336;╨ц╟и.;;;;;;;;;;X
-EVTDESC_CM_6337;дЦуЩлитздЦ╣дрЧ╬с╡ьдД╣ь╨╗Ё╘╢Ск╞,вЖвежь╩ьртмЫвтси©Люжй╠╧Б╣дцн.м╩х╩дЦ╦п╬УдЁжж╤╚нВй╙й╙╩╛╩╛╣ьв╙╫ЬдЦ╣д╠╩л╨юО.дЦцмх╩╬╞пя,╥╒╬УйбгИ╡╩цН.дЦя╦кы╣др╩йжмЫ╠╩л╨юОр╩в╔,в╔╣╫р╩лУ╠ЫюДгрЁ╓бЗашф╛╣диЗнО╡╒ф╢цЭ╣ье╓╤╞ве.дЦп║пд╣ь╣Цаа╣ф╧Бё╛жусз©╢╪ШдЦйжюОв╔ве╣дйгр╩лУп║иъ.дЦдэ©╢╪Шиъ╣д╪Бяюц╟ве╤╬р╨,оРдЦуе©╙ве.дЦ╨эгЕЁЧуБлУиъ╬Ь╡╩йге╪х╩ЁЖожтзуБ.╦пп╩[Root.Religion.RandomGodName]хцдЦкююОлсиЗ.;;;;;;;;;;X
+EVTDESC_CM_6337;дЦуЩлитздЦ╣дрЧ╬с╡ьдД╣ь╨╗Ё╘╢Ск╞,вЖвежь╩ьртмЫвтси©Люжй╠╧Б╣дцн.м╩х╩дЦ╦п╬УдЁжж╤╚нВй╙й╙╩╛╩╛╣ьв╙╫ЬдЦ╣д╠╩л╨юО.дЦцмх╩╬╞пя,╥╒╬УйбгИ╡╩цН.дЦя╦кы╣др╩йжмЫ╠╩л╨юОр╩в╔,в╔╣╫р╩лУ╠ЫюДгрЁ╓бЗашф╛╣диЗнО╡╒ф╢цЭ╣ье╓╤╞ве.дЦп║пд╣ь╣Цаа╣ф╧Бё╛жусз©╢╪ШдЦйжюОв╔ве╣дйгр╩лУп║иъ.дЦдэ©╢╪Шиъ╣д╪Бяюц╟ве╤╬р╨,оРдЦуе©╙ве.дЦ╨эгЕЁЧуБлУиъ╬Ь╡╩йге╪х╩ЁЖожтзуБ.╦пп╩[Root.Religion.GetRandomGodName]хцдЦкююОлсиЗ.;;;;;;;;;;X
 EVTOPTA_CM_6337;нр╩А╡ИЁЖ╠Ё╨Сйгк╜тзж╦й╧!;;;;;;;;;;X
 EVTDESC_CM_6338;кф╨Усцкёиъ╣дю╢╢ли╠[From.GetTitledName],╪ф╩╝Ё╧╣вй╖╟эак. х╩╤Ь,кШцг╩╧╡╒ц╩сп╥╒ожйгк╜тзж╦й╧╣д.;;;;;;;;;;X
 EVTOPTA_CM_6338;обр╩╢нхц[From.GetHerHim]╨ц©╢.;;;;;;;;;;X
@@ -1094,8 +1094,8 @@ faction_lower_tribal_organization_desc;еио╣Ёит╠цгд╠гСтз[This.GetName]ж╝об╫╣╣м╡©б
 faction_lower_tribal_organization_ultimatum;р╙гС╫╣╣м╡©бДвИж╞╤х╣х╪╤;;;;;;;;;;X
 faction_lower_tribal_organization_ultimatum_desc;оР╖Y[Root.Liege.GetBestName]╖!лА╫╩вН╨См╗К╨,р╙гС╫╣╣м╡©бДвИж╞╤х╣х╪╤.хГ╧Ш[Root.Liege.GetSubjectPronoun]╬э╬ЬакуБ╥щм╗К╨,дЦкЫтз╣деио╣╫╚╩А╥╒фП╠╘╤╞.;;;;;;;;;;X
 opinion_increased_tribal_organization;лАиЩ╡©бДвИж╞╤х╣х╪╤;;;;;;;;;;X
-UNCLE;Uncle;;;;;;;;;;X
-AUNT;Aunt;;;;;;;;;;X
+UNCLE;йЕйЕ;;;;;;;;;;X
+AUNT;╧ц╧ц;;;;;;;;;;X
 kharijite;©╗╥фюуеи;;;;;;;;;;X
 kharijite_DESC;©╗╥фюуеио╣йграк╧ю╪╫л╣др╩етж╖еио╣,тз╧╚т╙фъйю╪мтГфзтБ╢Ря╧сК╠ът╣╩╞.кШцгхон╙хн╨н╡╩╩з╦д╣двОхк╤╪йг©╗╥фюу - рак╧ю╪сцсОжп╣дрЛ╫лм╫,м╛яЫр╡╬э╬Ь╫сйэуЩмЁ╧ЧюО╥╒╣дцЭаН╬Ь╤туЩх╥╣д╦едН.тзсно╥жпу╧ож╣дльптсп:\n╖Y*╖!©╗╥фюуеи╣д╧ЧюО╥╒йг╠╩йюквмЁжнуъя║ЁЖ,р╡©ирт╡╩иХ╧ЧюО╥╒.\n╖Y*╖!©╗╥фюуеи╣д╧ЧюО╥╒дэкФрБуВ╥ЧфДкШ©╗╥фюуеи╣дмЁжнуъ.\n╖Y*╖!©╗╥фюуеи╣д╧ЧюО╥╒дэ╥╒фП╢С╫э╧Ч╣б\n╖Y*╖!©╗╥фюуеи╣дмЁжнуъдэ╧╩рт╪╟╠╩фзпМс╣сп╦╢йЩфчвс\n╖Y*╖!гЕуФкб╣дЁжспуъдэ╡╩йэочжфсихн╨нхкю╢╣ёхн\n╖Y*╖!©╗╥фюуеи╣д╪рвЕЁит╠тзц╩спвЦ╧╩╣даЛмарт╪╟╡╩дэс╝╣цу╫уЫй╓юШ╣дгИ©Жоб╩АтЖ╪с╦╞╩╞╤х;;;;;;;;;;X
 d_kharijite;©╗╥фюуеи╧ЧюО╥╒╧З;;;;;;;;;;X
