--- a/localisation/v2_02.csv
+++ b/localisation/v2_02.csv
@@ -39,10 +39,10 @@ narrow_flank_leader_desc;这个角色能够完美的利用有利地形进行侧翼防御.;;;;;;;;;;X
 NARROW_FLANK;有限的侧翼;;;;;;;;;;X
 TITLE_CANNOT_USURP_COUNTIES;无可能篡夺伯爵级的封号!;;;;;;;;;;X
 EVTOPTC65155;我成为了什么 ？不要告诉我.;;;;;;;;;;X
-EVTDESC_SoA_561;领地受益于[From.GetTitledName]，你的犹太人[Root.GetChancellorName]，已在领地外建立的庞大交流网络。不知何故[From.GetSheHe]总能适应新风俗以及新的外交形式。;;;;;;;;;;X
+EVTDESC_SoA_561;领地受益于[From.GetTitledName]，你的犹太人[Root.GetMyChancellorName]，已在领地外建立的庞大交流网络。不知何故[From.GetSheHe]总能适应新风俗以及新的外交形式。;;;;;;;;;;X
 EVTOPTA_SoA_561;做得好.;;;;;;;;;;X
-EVTDESC_SoA_563;[From.GetTitledName], 你的[Root.GetTreasurerName],和犹太人有一些联系. 犹太商人的商业网延伸到整个已知世界, 由西欧到遥远的中国, 这些网络极大的发展了国家的经济.;;;;;;;;;;X
-EVTDESC_SoA_565;你的[Root.GetSpymasterName], [From.GetTitledName],似乎在在欧洲的每个犹太小区中都有朋友和关系. 传信使者到达 [From.GetHerHis] 逗留一日为限, 经常带来由外国传入关于新武器和技术的重要知识.;;;;;;;;;;X
+EVTDESC_SoA_563;[From.GetTitledName], 你的[Root.GetMyTreasurerName],和犹太人有一些联系. 犹太商人的商业网延伸到整个已知世界, 由西欧到遥远的中国, 这些网络极大的发展了国家的经济.;;;;;;;;;;X
+EVTDESC_SoA_565;你的[Root.GetMySpymasterName], [From.GetTitledName],似乎在在欧洲的每个犹太小区中都有朋友和关系. 传信使者到达 [From.GetHerHis] 逗留一日为限, 经常带来由外国传入关于新武器和技术的重要知识.;;;;;;;;;;X
 LOADING_TIP_53;犹太人枢密大臣有时有利于发明新科技.;;;;;;;;;;X
 AIREASON_EXISTING_BETROTHAL;订婚是荣耀的;;;;;;;;;;X
 cathar_DESC;卡特里派或阿尔比派，异端拒绝承认神职人员和教宗的圣洁。他们只有一个单一的圣礼 - 安慰 - 除去邪恶，把信徒变成卡特里派的‘完美’教徒。;;;;;;;;;;X
