--- a/localisation/z_magne.csv
+++ b/localisation/z_magne.csv
@@ -1,2 +1,2 @@
-bear.6.undo;This is unbearable!;;;;;;;;;;X
-UNDO_BEAR_TRANSFORMATION;Waking up, everything is back to normal. Maybe all of this was just a dream...;;;;;;;;;;X
+bear.6.undo;这简直是熊孩子行为！;;;;;;;;;;X
+UNDO_BEAR_TRANSFORMATION;醒来后，一切都归于正常了。或许这一切都是一场梦…;;;;;;;;;;X
