--- a/localisation/v2_30.csv
+++ b/localisation/v2_30.csv
@@ -31,7 +31,7 @@ INSULT_CHILD;小屁孩;;;;;;;;;;X
 INSULT_VILE;卑鄙小人;;;;;;;;;;X
 INSULT_FOUL;肮脏的人;;;;;;;;;;X
 INSULT_FILTHY;下流的人;;;;;;;;;;X
-INSULT_CLOWN;小丑;;;;;;;;;;X
+INSULT_CLOWN;弄臣;;;;;;;;;;X
 INSULT_COW;牛;;;;;;;;;;X
 INSULT_INFIDEL;异教徒;;;;;;;;;;X
 INSULT_HERETIC;异端者;;;;;;;;;;X
@@ -535,10 +535,10 @@ EVTTOOLTIP_WoL_352_LOVE;我打赌 [This.GetFirstName] 是一个天真浪漫的人;;;;;;;;;;X
 EVTTOOLTIP_WoL_352_LEWD;我打赌 [This.GetFirstName] 是一个性经验丰富而且淫荡的人;;;;;;;;;;X
 EVTTOOLTIP_WoL_352_POET;我打赌 [This.GetFirstName] 会以诗歌和学识应对;;;;;;;;;;X
 EVTTOOLTIP_WoL_352_BREATH;使用一个经久不衰的伎俩来诱惑;;;;;;;;;;X
-EVTDESC_WOL_352;当我悄悄地走进了平时为我准备宵夜的厨房，我遇见了 [From.GetTitledFirstNameNoRegnal]. 我们谈笑了好几个小时而且话题越来越暧昧, 我们的手也握在了一起... 突然, [From.GetSubjectPronoun] 靠了过来并在我的耳边轻声低语...;;;;;;;;;;X
-EVTDESC_WOL_352_DISTANT;当我悄悄地走进了平时为我准备宵夜的厨房, 我遇见了一位来自远方的客人, [From.GetTitledFirstName]. 我们谈笑了好几个小时而且话题越来越暧昧, 我们的手也握在了一起... 突然, [From.GetSubjectPronoun] 靠了过来并在我的耳边轻声低语...;;;;;;;;;;X
-EVTDESC_WOL_352_HOMO;当我悄悄地走进了平时为我准备宵夜的厨房, 我遇见了 [From.GetTitledFirstNameNoRegnal]. 我们谈笑了好几个小时, 暧昧的气氛在我们之间滋生. 吸引力? 来自另一个 [From.GetManWoman]..?! 在我们将要离开的时候, [From.GetSubjectPronoun] 突然靠了过来并在我的耳边轻声低语...;;;;;;;;;;X
-EVTDESC_WOL_352_CR;当我悄悄地走进了平时为我准备宵夜的厨房, 我遇见了我的 [GetFromRelation] [From.GetFirstName]. 我们谈笑了好几个小时, 暧昧的气氛在我们之间滋生. 吸引力? 来自我的 [GetFromRelation]..?! 在我们将要离开的时候, [From.GetSubjectPronoun] 突然靠了过来并在我的耳边轻声低语...;;;;;;;;;;X
+EVTDESC_WOL_352;当我悄悄地走进了平时为我准备宵夜的厨房，我遇见了 [From.GetTitledFirstNameNoRegnal]. 我们谈笑了好几个小时而且话题越来越暧昧, 我们的手也握在了一起... 突然, [From.GetSubjectPronoun] 靠了过来并在我的耳边轻声低语...[Root.GetSeductionAstrologyPostScript];;;;;;;;;;X
+EVTDESC_WOL_352_DISTANT;当我悄悄地走进了平时为我准备宵夜的厨房, 我遇见了一位来自远方的客人, [From.GetTitledFirstName]. 我们谈笑了好几个小时而且话题越来越暧昧, 我们的手也握在了一起... 突然, [From.GetSubjectPronoun] 靠了过来并在我的耳边轻声低语...[Root.GetSeductionAstrologyPostScript];;;;;;;;;;X
+EVTDESC_WOL_352_HOMO;当我悄悄地走进了平时为我准备宵夜的厨房, 我遇见了 [From.GetTitledFirstNameNoRegnal]. 我们谈笑了好几个小时, 暧昧的气氛在我们之间滋生. 吸引力? 来自另一个 [From.GetManWoman]..?! 在我们将要离开的时候, [From.GetSubjectPronoun] 突然靠了过来并在我的耳边轻声低语...[Root.GetSeductionAstrologyPostScript];;;;;;;;;;X
+EVTDESC_WOL_352_CR;当我悄悄地走进了平时为我准备宵夜的厨房, 我遇见了我的 [GetFromRelation] [From.GetFirstName]. 我们谈笑了好几个小时, 暧昧的气氛在我们之间滋生. 吸引力? 来自我的 [GetFromRelation]..?! 在我们将要离开的时候, [From.GetSubjectPronoun] 突然靠了过来并在我的耳边轻声低语...[Root.GetSeductionAstrologyPostScript];;;;;;;;;;X
 EVTOPTA_WOL_352_POET;多么博学! 我难以抵御诗歌的魅力...;;;;;;;;;;X
 EVTOPTA_WOL_352_LEWD;多么下流, [From.GetFirstName]! 来吧, 让我们一起承担这份罪孽...;;;;;;;;;;X
 EVTOPTA_WOL_352_LOVE;爱情如此甜蜜! 我的心怎能抗拒?;;;;;;;;;;X
@@ -563,10 +563,10 @@ EVTOPTB_WOL_401;留给 [From.GetObjectPronoun] 一张纸条约定在小溪见面;;;;;;;;;;X
 EVTOPTC_WOL_401;和 [From.GetObjectPronoun] 一起单独散步;;;;;;;;;;X
 EVTOPTD_WOL_401;悄悄和 [From.GetObjectPronoun] 调情;;;;;;;;;;X
 EVTDESC_WOL_403;我发现 [From.GetBestName]同情我的浪漫行为。[From.GetSubjectPronounCap] 和 [FromFromFrom.GetFirstName] "偶然"在河边撞见了我, 我们三个度过了美妙的时光. 我觉得 [FromFromFrom.GetSubjectPronoun] 对我有好感, 因为 [FromFromFrom.GetSubjectPronoun] 几乎没发现 [FromFromFrom.GetPossPronoun] 朋友走了. 我靠到 [FromFromFrom.GetPossPronoun] 耳边...;;;;;;;;;;X
-EVTDESC_WOL_404;在一次野外踏青活动中, 我发现我和 [From.GetTitledFirstNameNoRegnal] 在一条小溪旁独处, 所有我的朋友和仆人似乎都不在我身边. 几个小时在我和迷人的 [From.GetTitledFirstNameNoRegnal] 的谈笑中渡过. 突然, [From.GetSubjectPronoun] 斜靠过来并在我的耳边轻声耳语...;;;;;;;;;;X
-EVTDESC_WOL_404_DISTANT;在一次野外踏青活动中, 我发现我和远方的来客 [From.GetTitledFirstName] 在一条小溪旁独处. 所有我的朋友和仆人似乎都不在我身边. 几个小时在我和迷人的 [From.GetTitledFirstNameNoRegnal] 的谈笑中渡过. 突然, [From.GetSubjectPronoun] 斜靠过来并在我的耳边轻声耳语...;;;;;;;;;;X
-EVTDESC_WOL_404_HOMO;在一次野外踏青活动中, [From.GetTitledFirstName] 离开了众人所在的地方走到了附近的小溪旁愉快的聊天. 几个小时过去了, 我们坐在山崖上看着水流, 暧昧的气氛在我们之中滋生. 吸引力? 来自另一个 [From.GetManWoman]..?! 当我们起身离开时, [From.GetSubjectPronoun] 突然靠过来并在我的耳边轻声耳语...;;;;;;;;;;X
-EVTDESC_WOL_404_CR;在一次野外踏青活动中, 我的 [GetFromRelation] [From.GetFirstName] 和我离开了众人所在的地方走到了附近的小溪旁. 紧挨着坐在山崖上, 流言和家族的提醒都抛之脑后... 欲望? 来自我自己的 [GetFromRelation]..?! 突然, [From.GetSubjectPronoun] 把手放到了我的腿上, 凑到我的耳边轻声细语...;;;;;;;;;;X
+EVTDESC_WOL_404;在一次野外踏青活动中, 我发现我和 [From.GetTitledFirstNameNoRegnal] 在一条小溪旁独处, 所有我的朋友和仆人似乎都不在我身边. 几个小时在我和迷人的 [From.GetTitledFirstNameNoRegnal] 的谈笑中渡过. 突然, [From.GetSubjectPronoun] 斜靠过来并在我的耳边轻声耳语...[Root.GetSeductionAstrologyPostScript];;;;;;;;;;X
+EVTDESC_WOL_404_DISTANT;在一次野外踏青活动中, 我发现我和远方的来客 [From.GetTitledFirstName] 在一条小溪旁独处. 所有我的朋友和仆人似乎都不在我身边. 几个小时在我和迷人的 [From.GetTitledFirstNameNoRegnal] 的谈笑中渡过. 突然, [From.GetSubjectPronoun] 斜靠过来并在我的耳边轻声耳语...[Root.GetSeductionAstrologyPostScript];;;;;;;;;;X
+EVTDESC_WOL_404_HOMO;在一次野外踏青活动中, [From.GetTitledFirstName] 离开了众人所在的地方走到了附近的小溪旁愉快的聊天. 几个小时过去了, 我们坐在山崖上看着水流, 暧昧的气氛在我们之中滋生. 吸引力? 来自另一个 [From.GetManWoman]..?! 当我们起身离开时, [From.GetSubjectPronoun] 突然靠过来并在我的耳边轻声耳语...[Root.GetSeductionAstrologyPostScript];;;;;;;;;;X
+EVTDESC_WOL_404_CR;在一次野外踏青活动中, 我的 [GetFromRelation] [From.GetFirstName] 和我离开了众人所在的地方走到了附近的小溪旁. 紧挨着坐在山崖上, 流言和家族的提醒都抛之脑后... 欲望? 来自我自己的 [GetFromRelation]..?! 突然, [From.GetSubjectPronoun] 把手放到了我的腿上, 凑到我的耳边轻声细语...[Root.GetSeductionAstrologyPostScript];;;;;;;;;;X
 EVTTOOLTIP_WoL_405;跟着 [This.GetObjectPronoun] 走入温暖的溪水中...;;;;;;;;;;X
 EVTDESC_WOL_405;[From.GetFirstName] 和我花了很多时间在水中和温暖的悬崖上做爱. 当我们在晚上笑嘻嘻和衣着整洁地回到宴会上时, 我们发现大家都在找我们. 侍从们冲了过来，而更多的人则充满怀疑地扬起了眉毛...;;;;;;;;;;X
 EVTDESC_WOL_405_SIN;在那河温暖的水中,[From.GetFirstName] 和我把灵魂献给了 [Root.Religion.GetRandomEvilGodName],得到了罪恶. 当那晚上我们回到派对上, 面露红光喜笑颜开, 侍者急着过来. 他们是不是知道了...[Root.Religion.GetRandomGodName]他们可不要知道!;;;;;;;;;;X
@@ -591,8 +591,8 @@ EVTOPTA_WOL_418_F;多么让人兴奋! 我的佣人可以掩护我.;;;;;;;;;;X
 EVTOPTA_WOL_418_M;多么让人兴奋! 我的朋友可以掩护我.;;;;;;;;;;X
 EVTOPTB_WOL_418;找一个没有风险的方法去追求 [FromFrom.GetFirstName]!;;;;;;;;;;X
 EVTDESC_WOL_419;我没有在小溪附近等待 [From.GetTitledFirstNameNoRegnal] 太久. 我们花了好几个小时谈笑聊天, 我相信 [From.GetSubjectPronoun] 爱上了我! 我倚在 [From.GetPossPronoun] 身上耳语...;;;;;;;;;;X
-EVTDESC_WOL_404_NOTE;我溜出帐篷去了小溪旁. 我发现 [From.GetTitledFirstNameNoRegnal] 正等着我, 当 [From.GetSubjectPronoun] 看着我时看上去是如此的耀眼. 几个小时的时间在我和 [GetRootFromCompliment] 的谈笑中渡过了. 突然, [From.GetSubjectPronoun] 斜靠过来并在我的耳边轻声低语...;;;;;;;;;;X
-EVTDESC_WOL_404_HOMO_NOTE;我溜出帐篷去了小溪旁. 我发现 [From.GetTitledFirstNameNoRegnal] 正等着我, 当 [From.GetSubjectPronoun] 看着我时看上去是如此的耀眼. 我们坐在山崖上并友好地交谈了好几个小时, 一种暧昧的气氛在我们之间滋生. 吸引力? 来自另一个 [From.GetManWoman]..?! 当我们要离开时, [From.GetSubjectPronoun] 突然斜靠过来并在我的耳边轻声低语...;;;;;;;;;;X
+EVTDESC_WOL_404_NOTE;我溜出帐篷去了小溪旁. 我发现 [From.GetTitledFirstNameNoRegnal] 正等着我, 当 [From.GetSubjectPronoun] 看着我时看上去是如此的耀眼. 几个小时的时间在我和 [GetRootFromCompliment] 的谈笑中渡过了. 突然, [From.GetSubjectPronoun] 斜靠过来并在我的耳边轻声低语...[Root.GetSeductionAstrologyPostScript];;;;;;;;;;X
+EVTDESC_WOL_404_HOMO_NOTE;我溜出帐篷去了小溪旁. 我发现 [From.GetTitledFirstNameNoRegnal] 正等着我, 当 [From.GetSubjectPronoun] 看着我时看上去是如此的耀眼. 我们坐在山崖上并友好地交谈了好几个小时, 一种暧昧的气氛在我们之间滋生. 吸引力? 来自另一个 [From.GetManWoman]..?! 当我们要离开时, [From.GetSubjectPronoun] 突然斜靠过来并在我的耳边轻声低语...[Root.GetSeductionAstrologyPostScript];;;;;;;;;;X
 EVTDESC_WOL_420;我在小溪旁等了好几个小时, 希望 [From.GetTitledFirstNameNoRegnal] 能够摆脱 [From.GetPossPronoun]朋友来见我, 但是直到日落. [From.GetSubjectPronounCap] 还是没有来.;;;;;;;;;;X
 EVTDESC_WOL_421;在一次野外郊游活动中, 我在帐篷旁边的花丛中发现了一条给我的 [GetFromFromFromRelation] [FromFromFrom.GetFirstName] 的信息! 一个骗子, [GetRootFromFromInsult] [FromFrom.GetTitledFirstName], 看来正在附近等着 [FromFromFrom.GetObjectPronoun] .;;;;;;;;;;X
 EVTOPTB_WOL_421;警卫! 抓住 [FromFrom.GetObjectPronoun]!;;;;;;;;;;X
@@ -700,7 +700,7 @@ EVTDESC_WOL_1036;经过几次试探交手, 我意识到 [FromFrom.GetTitledFirstNameNoRegnal
 EVTDESC_WOL_1036_WOUND;和 [FromFrom.GetTitledFirstNameNoRegnal] 的决斗是场苦战, 但最后我证明了我比 [Root.GetManWoman] 更强. 尽管 [FromFrom.GetSubjectPronoun] 试图砍伤我, 最后我还是证明了 [FromFrom.GetPossPronoun] 和我的 [GetFromFromFromFromRelation] [FromFromFromFrom.GetFirstName] 有罪.;;;;;;;;;;X
 EVTDESC_WOL_1036_MAIM;[FromFrom.GetTitledFirstNameNoRegnal] 被证明是一个强大的对手. 虽然我最后获得了胜利, 但我失去了三根手指同时受了一些伤. 我证明了 [FromFrom.GetPossPronoun] 和我的 [GetFromFromFromFromRelation] [FromFromFromFrom.GetFirstName] 有罪!;;;;;;;;;;X
 EVTOPTA_WOL_1036;我准许 [FromFrom.GetObjectPronoun] 毫发无伤地屈服, 在 [FromFrom.GetPossPronoun] 失去武器之后;;;;;;;;;;X
-EVTOPTB_WOL_1036;[FromFrom.GetSubjectPronoun] 在我划伤 [FromFrom.GetPossPronoun]肩膀后屈服了;;;;;;;;;;X
+EVTOPTB_WOL_1036;[FromFrom.GetSubjectPronounCap] 在我划伤 [FromFrom.GetPossPronoun]肩膀后屈服了;;;;;;;;;;X
 EVTOPTC_WOL_1036;[FromFrom.GetSubjectPronoun] 仅仅使我受了轻伤 当我砍断了 [FromFrom.GetPossPronoun]手时!;;;;;;;;;;X
 EVTOPTD_WOL_1036;我刺穿了[FromFrom.GetPossPronoun]心脏. 这对 [GetRootFromInsult] 来说是一个合适的结局!;;;;;;;;;;X
 EVTDESC_WOL_1037;我野蛮的 [GetFromRelation] [From.GetFirstName] 在决斗中打败了我心爱的 [FromFromFrom.GetTitledFirstNameNoRegnal] , 从而证明了我们有罪.;;;;;;;;;;X
