--- a/localisation/z_magne.csv
+++ b/localisation/z_magne.csv
@@ -1,2 +1,3 @@
-bear.6.undo;This is unbearable!;;;;;;;;;;X
-UNDO_BEAR_TRANSFORMATION;Waking up, everything is back to normal. Maybe all of this was just a dream...;;;;;;;;;;X
+bear.6.undo;这是难以忍受的！;;;;;;;;;;X
+UNDO_BEAR_TRANSFORMATION;醒来,一切都恢复正常。也许这一切只是一个梦……
+;;;;;;;;;;X
